--- a/Fundamentos_Web/Atividade_Primeiro_HTML+CSS/assets/css/style.css
+++ b/Fundamentos_Web/Atividade_Primeiro_HTML+CSS/assets/css/style.css
@@ -1,6 +1,5 @@
 /*fontes*/
-
-
+@import url('http://fonts.cdnfonts.com/css/valorant');
 
 
 body {
@@ -19,7 +18,7 @@ body {
     align-items: center;
     background-color:rgb(235, 84, 84) ;
     padding: 15px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin-bottom: 10px;
     border-radius: 5px;
 }
@@ -35,7 +34,7 @@ body {
 
 .container_descricao{
     font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'VALORANT', sans-serif;
     text-align: center;
     color: #a0a0a0;
     display: flex;
@@ -52,21 +51,21 @@ body {
 
 .container_music{
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'VALORANT' , sans-serif;
     text-align: center;
     color: rgb(235, 84, 84);
 }
 
 
 .post_title1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'VALORANT', sans-serif;
     font-size: 60px;
 }
 
 /* seus agentes */
 .post_title3 {
     font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'VALORANT', sans-serif;
     color: rgb(211, 211, 211);
     display: flex;
     text-align: center;
@@ -74,7 +73,7 @@ body {
     align-items: center;
     background-color:rgb(235, 84, 84) ;
     padding: 15px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin-bottom: 10px;
     border-radius: 5px;
 }
@@ -91,7 +90,7 @@ body {
 /*mapas*/
 .post_title4{
     font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'VALORANT', sans-serif;
     color: rgb(211, 211, 211);
     display: flex;
     text-align: center;
@@ -99,7 +98,7 @@ body {
     align-items: center;
     background-color:rgb(235, 84, 84) ;
     padding: 15px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin-bottom: 10px;
     border-radius: 5px;
 }
@@ -169,6 +168,7 @@ body {
     font-size: 20px;
     color: rgb(255, 255, 255); 
     text-decoration: none;
+    font-family: 'VALORANT', sans-serif;
 }
 
 
